--- a/source/_posts/2020-03-29-罗技MX Master 3简评.md
+++ b/source/_posts/2020-03-29-罗技MX Master 3简评.md
@@ -24,7 +24,7 @@ keywords:
 
 我的MX Master第一代在搬家的时候丢失了，我一度很难过。难过倒不是因为它有多好用，还是因为它不便宜。之后我买了个罗技M535，随便用用，觉得手感不行，便将它扔一边积灰了。
 
-说起来还是因为平日里工作量变大，我是触摸板达人，但是触摸板在双屏之间划来划去实在是太累了，只好又把积灰的M535捡起来用。可惜这小鼠标的精确度实在太大了，用得我好多次想要砸鼠标。没办法，还是决定去买一只新鼠标。看来看去实在没什么可以买的了，最终还是选择了MX Master系列的第三代，就指望着它能有些改进。
+说起来还是因为平日里工作量变大，我是触摸板达人，但是触摸板在双屏之间划来划去实在是太累了，只好又把积灰的M535捡起来用。可惜这小鼠标的精确度实在太差了，用得我好多次想要砸鼠标。没办法，还是决定去买一只新鼠标。看来看去实在没什么可以买的了，最终还是选择了MX Master系列的第三代，就指望着它能有些改进。
 
 作为罗技MX Master第一代的用户，我对这款鼠标并没有什么好感。或许正是因为它在网上好评如潮，我才会更对它失望，因为它跟我的心理预期实在是差太多了。随便列几个我不喜欢第一代mx master的理由：
 
