update git post

--- a/source/_posts/2020-03-22-Git基础简明教程.md
+++ b/source/_posts/2020-03-22-Git基础简明教程.md
@@ -172,7 +172,7 @@ author: tty
        update paginate
    ```
 
-   此时如果想回滚到上一次记录，则使用上此的commit id， 如下
+   此时如果想回到上一次记录，则使用上此的commit id， 如下
 
    ```bash
    git checkout c99efef6372eeb6aac5b0f0062dbd2c6a3bf26de
@@ -183,6 +183,14 @@ author: tty
    ```bash
    git checkout -- .
    ```
+   
+   假如你需要的是回滚到过去的状态，而不是直接回到上一个节点则用
+   
+   ```bash
+   git reset c99efef6372eeb6aac5b0f0062dbd2c6a3bf26de
+   ```
+   
+   
 
 ## 分支
 
