--- a/source/_posts/2020-02-20-初创企业股票基础知识.md
+++ b/source/_posts/2020-02-20-初创企业股票基础知识.md
@@ -7,10 +7,10 @@ subtitle:
 comments: true
 cover: https://raw.githubusercontent.com/8128/PicGo/master/20200321005721.png
 optimized_image: 
-category: financial
+category: finance
 tags:
   - tutorial
-  - financial
+  - finance
 author: Human Interest
 ---
 
