--- a/source/_posts/2020-03-26-JS测试教程.md
+++ b/source/_posts/2020-03-26-JS测试教程.md
@@ -7,7 +7,7 @@ subtitle:
 comments: true
 cover: https://raw.githubusercontent.com/8128/PicGo/master/20200326135918.png
 optimized_image: 
-category: tutorial
+category: javascript
 tags:
   - code
   - javascript
