--- a/source/_posts/2020-03-29-罗技MX Master 3简评.md
+++ b/source/_posts/2020-03-29-罗技MX Master 3简评.md
@@ -15,7 +15,7 @@ tags:
   - life
 categories: review
 description: 或许是最强无线商务鼠标？
-cover: https://raw.githubusercontent.com/8128/PicGo/master/20200329014124.png
+cover: https://raw.githubusercontent.com/8128/PicGo/master/20200329144956.png
 top_img:
 keywords:
 ---
@@ -24,7 +24,7 @@ keywords:
 
 我的MX Master第一代在搬家的时候丢失了，我一度很难过。难过倒不是因为它有多好用，还是因为它不便宜。之后我买了个罗技M535，随便用用，觉得手感不行，便将它扔一边积灰了。
 
-说起来还是因为平日里工作量变大，我是触摸板达人，但是触摸板在双屏之间划来划去实在是太累了，只好又把积灰的M535捡起来用。可惜这小鼠标的精确度实在太差了，用得我好多次想要砸鼠标。没办法，还是决定去买一只新鼠标。看来看去实在没什么可以买的了，最终还是选择了MX Master系列的第三代，就指望着它能有些改进。
+说起来还是因为平日里工作量变大，尽管我是触摸板达人，但是长时间用触摸板在双屏之间划来划去实在是太累了，只好又把积灰的M535捡起来用。可惜这小鼠标的精确度实在太差，用得我好多次想要砸鼠标。没办法，还是决定去买一只新鼠标。看来看去实在没什么可以买的了，最终还是选择了MX Master系列的第三代，就指望着它能有些改进。
 
 作为罗技MX Master第一代的用户，我对这款鼠标并没有什么好感。或许正是因为它在网上好评如潮，我才会更对它失望，因为它跟我的心理预期实在是差太多了。随便列几个我不喜欢第一代mx master的理由：
 
@@ -62,17 +62,13 @@ MX Master 3本身是支持蓝牙连接的，也就是说无需USB头就能连上
 
 这里我要介绍一下罗技的自定义按键了，重头戏是最左边那块扁平的按键，它是个向下按压的按键。在我们的日常使用中，你的大拇指会放在这个按键上。我们暂时称这个按键为按键A。它支持手势操作，你可以设置的鼠标宏有，按下A后的鼠标宏，和按下A以后上/下/左/右移动鼠标后引发的鼠标宏。
 
-这个按键在MX Master第一代中的体验并不是十分理想，其一是MX Master整体手感较重，其二是一代的A键比较重，大拇指按下去需要发点力，久而久之手就容易累。
+这个按键在MX Master第一代中的体验并不是十分理想，其一是MX Master整体手感较重，其二是一代的A键比较重，大拇指按下去需要发点力，久而久之手就容易累。三代我整体使用下来觉得这个按键还行，主要还是因为你不再需要用力去按它了。用A键，你可以轻松的在Mac的多窗口之间滑动，操作多任务，打开launch pad。A键的手势操作可以说是鼠标中少有的。
 
-三代我整体使用下来觉得这个按键还行，主要还是因为你不再需要用力去按它了。当然，如你所见，A键是一片区域，所以我也不太确定我之前用一代的时候觉得这个键很重，是不是因为我按的地方不对。
-
-用A键，你可以轻松的在Mac的多窗口之间滑动，操作多任务，打开launch pad。A键的手势操作可以说是鼠标中少有的。
-
-第二个需要强调的键是图左俯视图中滚轮下方的按键。这个按键的默认设定是SmartShift切换。那么首先要说明下什么是SmartShift。从第一代开始，MX Master就有电磁滚轮，它的滚轮相当与众不同。我们日常见到的鼠标滚轮，一般分为两类，一类是滚动很流畅的滚轮，你一滚可以滚老远的，在看长篇大论的时候很方便；另一类是有强烈阻力的滚轮，你在滚动的时候会有类似被齿轮卡住的阻塞感，它能帮助你精准定位。MX Master的电磁滚轮可以让你两者都有（我全都要.jpg），而且提供了SmartShift。只要开启了这个功能，你就能在用力推滚轮的时候进入流畅模式，慢慢推滚轮的时候进入齿轮模式。这个滚轮下方的按键，默认控制着smartshift的开关。
+第二个需要强调的键是图左俯视图中滚轮下方的按键。这个按键的默认设定是SmartShift切换。首先要说明下什么是SmartShift：从第一代开始，MX Master就有电磁滚轮，它的滚轮相当与众不同。我们日常见到的鼠标滚轮，一般分为两类，一类是滚动很流畅的滚轮，你一滚可以滚老远的，在看长篇大论的时候很方便；另一类是有强烈阻力的滚轮，你在滚动的时候会有类似被齿轮卡住的阻塞感，它能帮助你精准定位。MX Master的电磁滚轮可以让你两者都有（我全都要.jpg），而且提供了SmartShift。只要开启了这个功能，你就能在用力推滚轮的时候进入流畅模式，慢慢推滚轮的时候进入齿轮模式。这个滚轮下方的按键，默认控制着smartshift的开关。
 
 第三代的金属滚轮相较前几代体验更好了，没有了第一代电磁滚轮的生硬，在阻塞模式的时候略微平滑了一些。它的滚动速度比普通鼠标能高出90%，而在精准度上能比第二代MX更精准87%
 
-其他键我就不多说了，基本都是单击键，设置返回前进，tab之间切换什么的，你可以自定义。罗技还帮你做了一些软件适配，在部分软件中有预设鼠标宏。
+其他键我就不多说了，基本都是单击键，设置返回前进，tab之间切换什么的，你可以自定义。罗技还帮你做了一些软件适配，在部分软件中（例如office，PS）有预设鼠标宏。
 
 我有一个强烈推荐的自定义，就是将中间的滚轮绑定为look up，也就是mac自带的查字典。对着不会的词，一向下按鼠标中键，直接就帮你查了。相信我，绑定了查字典，看document你的效率会直线飞升。
 
