--- a/source/_posts/2020-03-29-Grunt教程.md
+++ b/source/_posts/2020-03-29-Grunt教程.md
@@ -29,7 +29,7 @@ Grunt是一款构建工具，为了让程序自动化而生。对于需要反复
 
 这部分入门是我自己写的简单入门，官方的快速入门在下面。
 
-假如你想要用grunt，首先你需要npm，然后在你的package下安装grunt，然后建立一个`Gruntfile.js`文件，在文件中写你的grunt设置。
+假如你想要用grunt，首先你需要npm，然后在你的package下安装grunt，然后建立一个`Gruntfile.js`文件，在文件中写你的grunt设置。grunt会根据你的`Gruntfile.js`来运作，例如：
 
 ```js
 module.exports = function(grunt) {
@@ -41,7 +41,7 @@ module.exports = function(grunt) {
     console.log("I'm Yelling");
   });
   
-  grunt.registerTask('yell', ['speak', 'yell']);
+  grunt.registerTask('cool', ['speak', 'yell']);
 };
 ```
 
@@ -54,6 +54,11 @@ I'm speaking
 
 $ grunt yell
 
+I'm Yelling
+
+$ grunt yell
+
+I'm speaking
 I'm Yelling
 ```
 
