--- a/source/_posts/2020-03-25-Lodash笔记.md
+++ b/source/_posts/2020-03-25-Lodash笔记.md
@@ -415,21 +415,14 @@ _.filter(users, 'active');
 // => objects for ['barney']
 ```
 
-##### _.keyBy 以新key重建数据结构
+##### _.omit(object, [paths]) 删除部分key-value
 
-`_.keyBy(collection, [iteratee=_.identity])`
+`_.omit(object, [paths])`，和pick刚好相反，但是速度比pick要更慢
 
 ```JavaScript
-var array = [
-  { 'dir': 'left', 'code': 97 },
-  { 'dir': 'right', 'code': 100 }
-];
+var object = { 'a': 1, 'b': '2', 'c': 3 };
  
-_.keyBy(array, function(o) {
-  return String.fromCharCode(o.code);
-});
-// => { 'a': { 'dir': 'left', 'code': 97 }, 'd': { 'dir': 'right', 'code': 100 } }
- 
-_.keyBy(array, 'dir');
-// => { 'left': { 'dir': 'left', 'code': 97 }, 'right': { 'dir': 'right', 'code': 100 } }
+_.omit(object, ['a', 'c']);
+// => { 'b': '2' }
 ```
+
