--- a/source/_posts/2020-03-30-自学Node.JS笔记.md
+++ b/source/_posts/2020-03-30-自学Node.JS笔记.md
@@ -21,6 +21,8 @@ hide: false
 
 来源：Udemy Course：The complete node.js developer course (3rd edition)
 
+这门课有个pdf，我看到哪就会记到哪
+
 # Node.js Module System
 
 ## Importing Node.js Core Modules
