--- a/source/_posts/2020-02-03-New-Blog.md
+++ b/source/_posts/2020-02-03-New-Blog.md
@@ -13,6 +13,7 @@ tags:
   - code
   - javascript
 author: tty
+top: true
 ---
 
 在世界回文字日，2020-02-02的后一天，本博客正式开张了。由于突然重感冒，本来计划的自驾游也随之取消。再加上近日新型肺炎肆虐，我并不想出门被人歧视，于是便在家里随便做点小项目，将以前的小破博客修整修整。当然，新博客出生，不能只说这些上不了台面的话。希望肺炎的阴霾早日消退，世界和平。
