--- a/source/_posts/2020-03-30-自学Node.JS笔记.md
+++ b/source/_posts/2020-03-30-自学Node.JS笔记.md
@@ -14,14 +14,14 @@ tags:
   - javascript
   - node
 author: tty
-hide: false
+hide: true
 ---
 
 因为工作原因，我需要学习Node.JS。作为一个在JavaScript上毫无建树的人，我只能从头学起。这是我的学习笔记。
 
 来源：Udemy Course：The complete node.js developer course (3rd edition)
 
-这门课有个pdf，我看到哪就会记到哪
+这门课有个pdf，我看到哪就会记到哪。这门课的内容也都比较基础，不建议有js基础的人看
 
 # Node.js Module System
 
@@ -267,3 +267,147 @@ Body: Note body here
 ```
 
 ## Storing Data with JSON
+
+### Working with JSON
+
+Since JSON is nothing more than a string, it can be used to store data in a text file or transfer data via an HTTP requests between two machines.
+
+JavaScript provides two methods for working with JSON. The first is `JSON.stringify` and the second is `JSON.parse`.`JSON.stringify` converts a JavaScript object into a JSON string, while`JSON.parse`  converts a JSON string into a JavaScript object.
+
+ ```js
+const book = {
+	title: 'Ego is the Enemy', 
+  author: 'Ryan Holiday'
+}
+
+// Covert JavaScript object into JSON string
+const bookJSON = JSON.stringify(book)
+
+// Covert JSON string into object
+const bookObject = JSON.parse(bookJSON) 
+console.log(bookObject.title) // Print: Ego is the Enemy
+ ```
+
+JSON looks similar to a JavaScript object, but there are some differences. The most obvious is that all properties are wrapped in double-quotes. Single-quotes can’t be used here, as JSON only supports double-quotes. You can see this in the example JSON below.
+
+```json
+{"name":"Gunther","planet":"Earth","age":54}
+```
+
+## ES6 Aside: Arrow Functions
+
+### Arrow Functions
+
+Arrow functions offer up an alternative syntax from the standard ES5 function. The snippet below shows an example of a standard function and then an arrow function. While the syntax is obviously different, you still have the two important pieces, an arguments list and a function body.
+
+```js
+// const square function (x) {
+//     return x * x
+// }
+const square = (x) => { 
+  return x * x
+}
+console.log(square(2))
+// Will print: 4
+```
+
+### Shorthand Syntax
+
+Arrow functions have an optional shorthand syntax. This is useful when you have a function that immediately returns a value. The example below shows how this can be used.
+
+```js
+const squareAlt = (x) => x * x 
+console.log(squareAlt(2)) // Will print: 4
+```
+
+Notice that two important things are missing from the function definition. First, the curly braces wrapping the function body have been removed as well as the return statement. In place of both is the value to be returned. There’s no need for an explicit return statement, as the value provide is implicitly returned.
+
+### This Binding
+
+Arrow functions don’t bind their own `this` value. Instead, the `this` value of the scope in which it was defined is accessible. This makes arrow functions bad candidates for methods, as `this` won’t be a reference to the object the method is defined on.
+
+For methods, ES6 provides a new method definition syntax. You can see this in the definition of the `printGuestList` method below. That function is a standard function, just with a shorthand syntax which allows for the removal of the colon and the function keyword.
+
+Because arrow functions don’t bind this, they work well for everything except methods. As shown below, the arrow function passed to `forEach` is able to access `this.name` correctly, as it’s defined as an arrow function and doesn’t have a this binding of its own. That code wouldn’t work if you swapped out the arrow function for a standard function.
+
+```js
+const event = {
+	name: 'Birthday Party',
+	guestList: ['Andrew', 'Jen', 'Mike'], 
+  printGuestList() {
+		console.log('Guest list for ' + this.name)
+		this.guestList.forEach((guest) => { 
+      console.log(guest + ' is attending ' + this.name)
+		}) 
+  }
+}
+event.printGuestList()
+```
+
+# Debugging Node.js
+
+## Debugging Node.js
+
+### Console.log
+
+While it’s nice to have advanced debugging tools at the ready, there’s nothing wrong with using `console.log` to debug your application. It’s not the fanciest technique, but it works, and I use it daily.
+
+When in doubt, use a few calls to `console.log` to figure out what’s going on. It’s great for dumping a variable to the terminal so you can check its value. It also works for figuring out what order your code is running in.
+
+### Node Debugger
+
+Printing values to the console with `console.log` is a good start, but there are often times where we need a more complete debugging solution. For that, Node.js ships with a built-in debugger. It builds off of the developer tools that Chrome and V8 use when debugging JavaScript code in the browser.
+
+Start your application with `inspect` to use the debugger.
+
+```bash
+node inspect app.js
+```
+
+Next, visit chrome://inspect in the Chrome browser. There, you’ll see a list of all the Node.js processes that you’re able to debug. Click “inspect” next to your Node.js process to open up the developer tools. From there, you can click the blue “play” button near the top-right of the “sources” tab to start up the application.
+
+When running the app in debug mode, you can add breakpoints into your application to stop it at a specific point in the code. This gives you a chance to explore to the application state and figure out what’s going wrong.
+
+```js
+console.log('Thing one)
+            
+debugger // Debug tools will pause here until your click play again 
+            
+console.log('Thing two)
+```
+
+# Asynchronous Node.js
+
+## Asynchronous Basics
+
+### Async 101
+
+When running asynchronous code, your code won’t always execute in the order you might expect. To get started with asynchronous development, let’s use `setTimeout`.
+
+`setTimeout` is a function that allows you to run some code after a specific amount of time has passed. `setTimeout` accepts two arguments. The first is a callback function. This function will run after the specified amount of time has passed. The second argument is the amount of time in milliseconds to wait.
+
+Here’s an example.
+
+```js
+console.log('Starting')
+
+// Wait 2 seconds before running the function
+setTimeout(() => {
+	console.log('2 Second Timer')
+}, 2000) 
+
+console.log('Stopping')
+```
+
+Run the script and you’ll see the logs in the following order.
+
+```bash
+$ node app.js 
+Starting 
+Stopping
+2 Second Timer
+```
+
+Notice that “Stopping” prints before “2 Second Timer”. That’s because setTimeout is asynchronous and non-blocking. The setTimeout call doesn’t block Node.js from running other code while it’s waiting for the 2 seconds to pass.
+
+This asynchronous and non-blocking nature makes Node.js ideal for backend development. Your server can wait for data from a database while also processing an incoming HTTP request.
