--- a/source/_posts/2020-03-29-罗技MX Master 3简评.md
+++ b/source/_posts/2020-03-29-罗技MX Master 3简评.md
@@ -66,7 +66,7 @@ MX Master 3本身是支持蓝牙连接的，也就是说无需USB头就能连上
 
 第二个需要强调的键是图左俯视图中滚轮下方的按键。这个按键的默认设定是SmartShift切换。首先要说明下什么是SmartShift：从第一代开始，MX Master就有电磁滚轮，它的滚轮相当与众不同。我们日常见到的鼠标滚轮，一般分为两类，一类是滚动很流畅的滚轮，你一滚可以滚老远的，在看长篇大论的时候很方便；另一类是有强烈阻力的滚轮，你在滚动的时候会有类似被齿轮卡住的阻塞感，它能帮助你精准定位。MX Master的电磁滚轮可以让你两者都有（我全都要.jpg），而且提供了SmartShift。只要开启了这个功能，你就能在用力推滚轮的时候进入流畅模式，慢慢推滚轮的时候进入齿轮模式。这个滚轮下方的按键，默认控制着smartshift的开关。
 
-第三代的金属滚轮相较前几代体验更好了，没有了第一代电磁滚轮的生硬，在阻塞模式的时候略微平滑了一些。它的滚动速度比普通鼠标能高出90%，而在精准度上能比第二代MX更精准87%
+第三代的金属滚轮相较前几代体验更好了，没有了第一代电磁滚轮的生硬，在阻塞模式的时候略微平滑了一些。它的滚动速度比普通鼠标能高出90%，而在精准度上能比第二代MX更精准87%。但是，我不知道是Mac平台的缘故还是罗技适配的缘故，我在Mac上慢速滑动滚轮的时候会有滚动速度不确定的情况。就是我以相同的慢速滑，有的时候快，有的时候慢，导致我无法准确定位。
 
 其他键我就不多说了，基本都是单击键，设置返回前进，tab之间切换什么的，你可以自定义。罗技还帮你做了一些软件适配，在部分软件中（例如office，PS）有预设鼠标宏。
 
