--- a/source/_posts/2020-03-30-自学Node.JS笔记.md
+++ b/source/_posts/2020-03-30-自学Node.JS笔记.md
@@ -23,6 +23,8 @@ hide: true
 
 这门课有个pdf，我看到哪就会记到哪。这门课的内容也都比较基础，不建议有js基础的人看
 
+pdf下载传送门：
+
 # Node.js Module System
 
 ## Importing Node.js Core Modules
