--- a/source/_posts/2020-03-30-自学Node.JS笔记.md
+++ b/source/_posts/2020-03-30-自学Node.JS笔记.md
@@ -94,3 +94,76 @@ require('yargs') // eslint-disable-line
 ```
 
 Run the example above with `--help` to see the help for the application.
+
+# 代码风格
+
+变量遵循驼峰命名
+
+$ dollar sign开头的函数一般表示getter setter
+
+_ lowdash 开头一般表示对数据库的操作
+
+# 异步
+
+## async
+
+传送门：[async doc](https://caolan.github.io/async/v3/)
+
+这是一个nodejs库
+
+#### waterfall(tasks, callback*opt*)
+
+有两种用法。因为有两个输入，所以你可以在第一个输入中只写函数名，第二个cb中写详细函数功能。第二个用法就是在第一个输入中就把所有task写完整
+
+Runs the `tasks` array of functions in series, each passing their results to the next in the array. However, if any of the `tasks` pass an error to their own callback, the next function is not executed, and the main `callback` is immediately called with the error.
+
+##### Parameters:
+
+| Name       | Type                | Description                                                  |
+| :--------- | :------------------ | :----------------------------------------------------------- |
+| `tasks`    | Array               | An array of [async functions](https://caolan.github.io/async/v3/global.html) to run. Each function should complete with any number of `result` values. The `result` values will be passed as arguments, in order, to the next task. |
+| `callback` | function <optional> | An optional callback to run once all the functions have completed. This will be passed the results of the last task's callback. Invoked with (err, [results]). |
+
+##### Returns:
+
+undefined
+
+##### Example
+
+```js
+async.waterfall([
+    function(callback) {
+        callback(null, 'one', 'two');
+    },
+    function(arg1, arg2, callback) {
+        // arg1 now equals 'one' and arg2 now equals 'two'
+        callback(null, 'three');
+    },
+    function(arg1, callback) {
+        // arg1 now equals 'three'
+        callback(null, 'done');
+    }
+], function (err, result) {
+    // result now equals 'done'
+});
+
+// Or, with named functions:
+async.waterfall([
+    myFirstFunction,
+    mySecondFunction,
+    myLastFunction,
+], function (err, result) {
+    // result now equals 'done'
+});
+function myFirstFunction(callback) {
+    callback(null, 'one', 'two');
+}
+function mySecondFunction(arg1, arg2, callback) {
+    // arg1 now equals 'one' and arg2 now equals 'two'
+    callback(null, 'three');
+}
+function myLastFunction(arg1, callback) {
+    // arg1 now equals 'three'
+    callback(null, 'done');
+}
+```
